# TheoryOfGame

./: CMakeLists.txt  main.cpp
examples/: example.txt  example2.txt
include/: Criteria.hpp  Matrix.hpp
src/: Criteria.cpp  Matrix.cpp
